--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- pagepiling css -->
+    <link rel="stylesheet" href="css/jquery.pagepiling.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-   <!-- nav bar -->
-   
+    <!-- nav bar -->
 
 
+    <div id="pagepiling">
+        
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+    </div>
+
+
+
+
+
+    <!-- jquery js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- pagepiling js -->
+    <script src="jquery.pagepiling.js"></script>
     <!-- bootstrap js cdn -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -29,6 +46,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <!-- pagepiligngingignign -->
+    <script src="pile.js"></script>
 </body>
 
 </html>
