--- a/mekpart/index.html
+++ b/mekpart/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TEDxKasetsartU</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- fa css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/21af1254cb.js"></script>
     <!-- bootstrap css -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,64 +23,30 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top py-0">
-        <div>
-            <a class="navbar-brand white" href="#">
-                <h3><b class="red superbold no-bot-m">TED<sup>x</sup></b>KasetsartU</b></h3>
-                <p class="smol-x"><span class="red ">x</span> = independently organized TED event</p>
-            </a>
-            
-        </div>
-
+        <a class="navbar-brand"><h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1></a>
+        <p class="xequal"><span style="color: red">x</span> = indenpendently organized TED event</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon">|||</span>
+            <i class="fas fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Speakers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Past Event</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link activeeiei" href="#">TICKET</a>
-                </li>
-
+                <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Partners</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Past Event</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link active-a" href="#">TICKET</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- content -->
     <div id="pagepiling">
-        <div class="section" id="intro">
-            <center class="white">
-                <h1 class="no-bot-m"><b class="red superbold">TED<sup>x</sup></b>KasetsartU</h1>
-                <p><span class="red ">x</span> = independently organized TED event</p>
-                <h3 class="strand">2019</h3>
-            </center>
-        </div>
-        <div class="section" id="info">
-            <center>
-                <h1>Past Speakers</h1>
-                <hr>
-            </center>
-        </div>
-        <div class="section" id="stuff">
-            <center>WAO!</center>
-        </div>
-        <div class="section" id="attend">
-            <center>very teddy</center>
-        </div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
+        <div class="section">Some section</div>
     </div>
 
     <!-- jquery js -->
