--- a/eyepart/watch.html
+++ b/eyepart/watch.html
@@ -6,52 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TEDxKasetsartU</title>
-    <link rel="shortcut icon" href="../img/favicon.png" type="img/png">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- custom css -->
-    <link rel="stylesheet" href="../mekpart/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/watch.css">
 </head>
 
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top py-0">
-        <div>
-            <a class="navbar-brand white" href="../mekpart/index.html">
-                <h3><b class="red superbold no-bot-m">TED<sup>x</sup></b>KasetsartU</b></h3>
-                <p class="smol-x"><span class="red ">x</span> = independently organized TED event</p>
-            </a>
-
-        </div>
-
+        <a class="navbar-brand">
+            <h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1>
+        </a>
+        <p class="xequal"><span style="color: red">x</span> = indenpendently organized TED event</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon">|||</span>
+            <i class="fas fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Speakers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="watch.html">Past Event</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link activeeiei" href="#">TICKET</a>
-                </li>
-
+                <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Partners</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Past Event</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link active-a" href="#">TICKET</a></li>
             </ul>
         </div>
     </nav>
