--- a/mekpart/index.html
+++ b/mekpart/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/jquery.pagepiling.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/content_style.css">
+
 </head>
 
 <body>
