--- a/nathunpart/participate.html
+++ b/nathunpart/participate.html
@@ -18,7 +18,6 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
     <!-- navbar -->
@@ -41,6 +40,14 @@
             </ul>
         </div>
     </nav>
+    <div class="container">
+        <div class="box-flex">
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+        </div>
+    </div>
 
     <!-- jquery js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
