--- a/nathunpart/participate.html
+++ b/nathunpart/participate.html
@@ -43,8 +43,10 @@
     <div class="container">
         <div class="box-flex">
             <div class="box">
+                <img src="img/handshake (1).png" alt="" class="handshake">
             </div>
             <div class="box">
+                    <img src="img/raise-hand.png" alt="" class="raise-hand">
             </div>
         </div>
     </div>
