update stlye and add animation

--- a/nathunpart/participate.html
+++ b/nathunpart/participate.html
@@ -18,11 +18,14 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top py-0">
-        <a class="navbar-brand"><h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1></a>
+        <a class="navbar-brand">
+            <h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1>
+        </a>
         <p class="xequal"><span style="color: red">x</span> = indenpendently organized TED event</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <i class="fas fa-bars"></i>
@@ -33,7 +36,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Partners</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Participate
-                </a></li>
+                    </a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Past Event</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 <li class="nav-item"><a class="nav-link active-a" href="#">TICKET</a></li>
@@ -43,10 +46,26 @@
     <div class="container">
         <div class="box-flex">
             <div class="box">
+                <h2 class="topic">BE OUR PARTNER</h2>
                 <img src="img/handshake (1).png" alt="" class="handshake">
+                <p class="describe container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod consectetur earum
+                    placeat. Sit vero voluptatum possimus qui, hic adipisci sequi aliquid consectetur magni totam
+                    blanditiis recusandae, accusamus perferendis porro alias.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, quia officia, soluta veniam
+                    nobis quidem tenetur recusandae exercitationem esse aliquam repudiandae asperiores iure dolores
+                    fugiat incidunt rerum atque totam in.
+                </p>
             </div>
             <div class="box">
-                    <img src="img/raise-hand.png" alt="" class="raise-hand">
+                <h2 class="topic">BE OUR VOLUNTEER</h2>
+                <img src="img/raise-hand.png" alt="" class="raise-hand">
+                <p class="describe container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod consectetur earum
+                    placeat. Sit vero voluptatum possimus qui, hic adipisci sequi aliquid consectetur magni totam
+                    blanditiis recusandae, accusamus perferendis porro alias.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo excepturi pariatur, ratione,
+                    reiciendis repudiandae ex distinctio saepe voluptas corrupti iure necessitatibus. Repudiandae est ut
+                    praesentium, impedit quia minima! Quod, perspiciatis.</p>
+
             </div>
         </div>
     </div>
