--- a/mekpart/index.html
+++ b/mekpart/index.html
@@ -25,8 +25,10 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top py-0">
-        <a class="navbar-brand"><h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1></a>
-        <p class="xequal"><span style="color: red">x</span> = indenpendently organized TED event</p>
+        <div class="lowLh">
+            <a class="navbar-brand"><h1 class="logo">TED<sup>x</sup><span class="logo2">KasetsartU</span></h1></a>
+            <p class="xequal"><span style="color: red">x</span> = indenpendently organized TED event</p>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <i class="fas fa-bars"></i>
         </button>
