--- a/nathunpart/participate.html
+++ b/nathunpart/participate.html
@@ -147,9 +147,9 @@
             <i class="fa fa-bars"></i>
         </div>
     </header>
-    <div class="container">
+    <div class="grid-container">
         <div class="box-flex">
-            <div class="box">
+            <div class="up box">
                 <h2 class="topic">BE OUR PARTNER</h2>
                 <img src="img/handshake (1).png" alt="" class="handshake">
                 <p class="describe container">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod consectetur
