--- a/mekpart/nav.html
+++ b/mekpart/nav.html
@@ -145,6 +145,10 @@
     <section class="white"></section>
     <section class="white"></section>
 
+    <footer>
+        
+    </footer>
+
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- main app js -->
