--- a/nathunpart/participate.html
+++ b/nathunpart/participate.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/jquery.pagepiling.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../mekpart/css/nav.css">
 </head>
 
 <body>
