remove header tranparency and border for mobile li

--- a/mekpart/nav.html
+++ b/mekpart/nav.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- navbar -->
-    <header>
+    <header class="pri-bg">
         <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1095.58 172.97">
                 <defs>
