--- a/eyepart/watch.html
+++ b/eyepart/watch.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/21af1254cb.js"></script>
     <!-- custom css -->
     <link rel="stylesheet" href="css/watch.css">
-    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="../mekpart/css/nav.css" />
 </head>
 
 <body>
@@ -360,7 +360,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js"></script> -->
     <!-- watch page js -->
     <script src="js/watch.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="../mekpart/js/nav.js"></script>
 </body>
 
 </html>
